--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <body>
         <div ng-app="hrApp">
             <div ng-include="'views/menu.html'"></div>
-            <div class="container-fluid" ng-view></div>
+
+            <div class="container" ng-view></div>
         </div>
 
         <script type="text/javascript" src="bower_components/jquery/jquery.js"></script>
@@ -23,25 +24,24 @@
         <script type="text/javascript" src="scripts/services/MenuServices.js"></script>
         <script type="text/javascript" src="scripts/controllers/MenuController.js"></script>
         <script type="text/javascript" src="scripts/services/EmployeeService.js"></script>
-        <script type="text/javascript" src="scripts/controllers/employee/EmployeeListController.js"></script>
-        <script type="text/javascript" src="scripts/controllers/employee/EmployeeViewController.js"></script>
-        <script type="text/javascript" src="scripts/controllers/employee/EmployeeAddController.js"></script>
-        <script type="text/javascript" src="scripts/controllers/employee/EmployeeEditController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/employees/EmployeeListController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/employees/EmployeeViewController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/employees/EmployeeAddController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/employees/EmployeeEditController.js"></script>
         <script type="text/javascript" src="scripts/services/JobService.js"></script>
-        <script type="text/javascript" src="scripts/controllers/job/JobListController.js"></script>
-        <script type="text/javascript" src="scripts/controllers/job/JobAddController.js"></script>
-        <script type="text/javascript" src="scripts/controllers/job/JobViewController.js"></script>
-        <script type="text/javascript" src="scripts/controllers/job/JobEditController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/jobs/JobListController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/jobs/JobAddController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/jobs/JobViewController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/jobs/JobEditController.js"></script>
         <script type="text/javascript" src="scripts/services/LocationService.js"></script>
         <script type="text/javascript" src="scripts/controllers/location/LocationListController.js"></script>
         <script type="text/javascript" src="scripts/controllers/location/LocationAddController.js"></script>
         <script type="text/javascript" src="scripts/controllers/location/LocationViewController.js"></script>
         <script type="text/javascript" src="scripts/controllers/location/LocationEditController.js"></script>
         <script type="text/javascript" src="scripts/services/DepartmentService.js"></script>
-        <script type="text/javascript" src="scripts/controllers/department/DepartmentListController.js"></script>
-        <script type="text/javascript" src="scripts/controllers/department/DepartmentAddController.js"></script>
-        <script type="text/javascript" src="scripts/controllers/department/DepartmentViewController.js"></script>
-        <script type="text/javascript" src="scripts/controllers/department/DepartmentEditController.js"></script>
-
+        <script type="text/javascript" src="scripts/controllers/departments/DepartmentListController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/departments/DepartmentAddController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/departments/DepartmentViewController.js"></script>
+        <script type="text/javascript" src="scripts/controllers/departments/DepartmentEditController.js"></script>
     </body>
 </html>
